...
  String get txtotpSentToGuarantorPhone => 'OTP sent to guarantor phone';

  @override
  String get txtphoneVerifiedSuccessfully => 'Phone verified successfully';

  @override
  String get txtguarantorDetails => 'Guarantor Details';

  @override
  String get txtguarantorPhoneNumber => 'Guarantor Phone Number';

  @override
  String get txtphoneNumberVerified => 'Phone Number Verified';
...

  @override
  String get txtswitchingBetweenTypesIsPossibleLaterThroughAccountSettingsThoughCommercialAccessMayRequireAdditionalVerification =>
      'Switching between types is possible later through account settings, though commercial access may require additional verification.';

  @override
  String get txtconfirmSelection => 'Confirm Selection';

  @override
  String get txtdrawSignature => 'Draw Signature';

  @override
  String get txtclear => 'Clear';
...
      'Please review and accept our legal documents to continue.';

  @override
  String get txtagreeToTerms => 'Agree to Terms';

  @override
  String get txtcontinue => 'Continue';

  @override
  String get txtskip => 'Skip';

  @override
  String get txtguarantorSkipTitle => 'Skip guarantor?';
...

  @override
  String get intentSubtitle =>
      'Select your primary usage to help us customize your experience and support.';

  @override
  String get intentDeliveryTitle => 'Deliver with Us';

  @override
  String get intentDeliveryDesc =>
      'Rent an EV for logistics, delivery, or commercial needs. Includes hub support.';

  @override
...
