...
  factory PreDashboardCtaCard.bookVehicle({
    required VoidCallback? onPressed,
  }) {
    return PreDashboardCtaCard(
      title: 'Rental Plan Selection',
      description:
          'Choose a rental plan (Daily, Weekly, or Monthly) to proceed with your vehicle booking.',
      buttonLabel: 'SELECT RENTAL PLAN',
      buttonIcon: Icons.two_wheeler,
      gradientColors: [AppColors.primary, AppColors.primaryDark],
      buttonColor: AppColors.primary,
      onPressed: onPressed,
    );
...
